Fix spec after adversarial review: POM-declared deps and safer dock icon
Adversarial pass (clean subagent) proved the headline mechanism failed:
when a jbang alias 'ref' is a GAV, jbang drops the alias 'deps', so JavaFX
never reaches the JVM. Corrected:

- Declare JavaFX + richtextfx as classifier-less deps in the published POM;
  jbang recomputes the host-correct classifier from the GAV. Removed the
  false 'keep JavaFX out of the POM' rationale.
- Set the dock icon on the JavaFX thread inside the app, not in the pre-Main
  bootstrap, to avoid an AWT-vs-Glass Cocoa main-thread conflict; verify
  on-screen.
- Wire Implementation-Version into the jar manifest for the version-stamped
  cache; note the real dlopen enabler is Temurin's disable-library-validation
  entitlement (pin the vendor); cache under ~/Library/Caches.
- Call the Central publish/sign wiring net-new (not a btrace copy-paste);
  add Ghostty MIT attribution.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>